Improve Android file selection and preserve signing-key compatibility (#73)
* Add files via upload

* Delete APP_OVERHAUL.md

* Add files via upload

* Add files via upload

* Add files via upload

* Add files via upload

* Add files via upload

* Add files via upload

* Add files via upload

* Apply BAI overhaul fixes

* Preserve legacy signing keys and harden Android edge cases (#74)

Restore picker state safely, scope storage permissions by API level, fix MIUI version handling, and add a legacy-key upgrade test.

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Harden storage picker lifecycle and signing key cleanup (#75)

Restore internal picking safely across configuration changes, use SAF on Android 13+, delete legacy keys, and migrate the upgrade test to AndroidX JUnit.

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Add context field to DefaultLegalStuffProvider

Added a context field to DefaultLegalStuffProvider for better context management.

* Refactor MIUI version comparison logic

* Fix backup and Android 15 compatibility

* Remove unused context from legal stuff provider

* Another Structural Change

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>